# eventbus

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt  results.md
benchmark/src/: event_bus.cpp  event_bus_any.cpp
cmake/: CPM.cmake  CompilerWarnings.cmake
demo/: CMakeLists.txt  main.cpp
documentation/: CMakeLists.txt
eventbus/: CMakeLists.txt
eventbus/include/eventbus/: event_bus.hpp  event_bus_with_variant.hpp
eventbus/include/eventbus/detail/: any.hpp  storage_policy.hpp  type_name.hpp  value_traits.hpp
eventbus/test/: event_bus_tests.cpp
